@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Jelmer Vernooĳ <jelmer@debian.org>
 Build-Depends:
- debhelper (>= 11~),
+ debhelper (>= 10~),
  pkg-config,
  uuid-dev
 Standards-Version: 4.2.0
