@@ -5,6 +5,8 @@ lintian-brush (0.22) UNRELEASED; urgency=medium
   * Support upgrading from --no-restart-on-upgrade
   * Fix guessing from launchpad URLs.
   * Add fixer for debian-watch-file-uses-deprecated-githubredir.
+  * Don't attempt to upgrade cdbs packages to anything over debhelper
+    10.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 16:49:28 +0000
 
